# wake_word_detection_experiments

./: .gitignore  report.ods
Voice-Assistant-wake-word-detection-model/: hello.py  pyproject.toml  requirements.txt
Voice-Assistant-wake-word-detection-model/AI-Voice-Assistant/wakeword/: engine.py  wakeword.pt  wakeword_temp
Voice-Assistant-wake-word-detection-model/AI-Voice-Assistant/wakeword/neuralnet/: test.json  train.json
Voice-Assistant-wake-word-detection-model/AI-Voice-Assistant/wakeword/scripts/: auto_split.py
neuralintense_experiment/: audio_listener.py  intents.json  neural_intense_experiment.py  requirements.txt
open_wake_word_experiment/: openwakeword_experiment.py  requirements.txt
pvporcupine_experiment/: pvporcupine_word_detection.py  pyproject.toml
pvporcupine_experiment/models/porcupine_alisa_model/: porcupine_ru_keywords.ppn
