[project]
name = "voice-assistant-wake-word-detection-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "audioread>=3.0.1",
    "dill>=0.3.9",
    "fsspec>=2024.10.0",
    "pandas>=2.2.3",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "scikit-learn>=1.6.0",
    "sonopy>=0.1.2",
    "tabulate>=0.9.0",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
]
